...
    <string name="SelectFolderForFiles">Select or create a folder for your vault</string>
    <string name="FilesExportedTo">Files exported to</string>
    <string name="FileCorruptOrTampered">File is corrupt or tampered</string>
    <string name="Rename">Rename</string>
    <string name="NewFilename">New Filename</string>
    <string name="ExitApp">Exit application?</string>
    <string name="NewFolder">New Folder</string>
    <string name="FolderName">Folder Name</string>
    <string name="CouldNotCreateFolder">Could not create folder</string>
    <string name="Items">Items</string>
    <string name="DeleteSourceFilesAfterImport">Delete source files after import</string>
    <string name="DeleteFilesAfterImport">Delete files after import</string>
    <string name="Search">Search</string>
...
    <string name="Stopped">Stopped</string>
    <string name="Stop">Stop</string>
    <string name="Any">Any</string>
    <string name="MatchAnyTerm">Match any term</string>
    <string name="HideScreenContents">Hide Screen Contents</string>
    <string name="Speed">Speed</string>
    <string name="MultiSelect">Multi Select</string>
    <string name="SingleSelect">Single Select</string>
    <string name="DeleteSelected">Delete Selected</string>
    <string name="MoveSelected">Move Selected</string>
    <string name="CopySelected">Copy Selected</string>
    <string name="ExportSelected">Export Selected</string>
    <string name="FilesDeleted">Files Deleted</string>
    <string name="SelectAll">Select All</string>
    <string name="UnselectAll">Unselect All</string>
    <string name="Move">Move</string>
    <string name="Copy">Copy</string>
    <string name="Paste">Paste</string>
    <string name="ItemsSelectedForCopy">Items selected for copy</string>
    <string name="ItemsSelectedForMove">Items selected for move</string>
    <string name="NewFile">New File</string>
    <string name="OpenVault">Open Vault</string>
    <string name="NewVault">New Vault</string>
    <string name="CloseVault">Close Vault</string>
...
